--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Enjoy Trip</title>
+    <style>
+      @keyframes dissapear {
+        from {
+          opacity: 1;
+        }
+        to {
+          opacity: 0;
+        }
+      }
+
+      .message {
+        z-index: 1000;
+        animation: notification 0.5s ease-out forwards,
+          dissapear 0.5s ease-in forwards;
+        animation-delay: 0.5s, 2s;
+        box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25),
+          0 8px 16px -8px rgba(0, 0, 0, 0.3),
+          0 -6px 16px -6px rgba(0, 0, 0, 0.025);
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
